fix header overflow issue

--- a/dev/scss/_header.scss
+++ b/dev/scss/_header.scss
@@ -3,11 +3,10 @@
 
 //header styles here
 header{
-    
+    margin: 3rem 0 1rem;
     font-family: $font-navigation;
     font-weight: $font-weight-navigation;
 
-    div:nth-child(1){
         span{
             color: $font-color-alt-heading;
             // only for icon size
@@ -24,10 +23,9 @@ header{
             max-width: 50%;
             padding: 1rem;
         }
-    }
 
     nav{
-        padding: 0 0 .97rem;
+        margin: 1rem 0;
         background-color: $accent-color2;
         ul{
             list-style: none;
@@ -47,7 +45,7 @@ header{
                 @include flex-row();
                 justify-content: space-between;
                 padding: inherit 2rem;
-                max-width: 960px;
+                max-width: 97.69%;
                 margin: 0 auto;
 
                 li a{
@@ -60,6 +58,12 @@ header{
                 }
             }
         }
+
+        @media(min-width:64em){
+            ul{
+                max-width: 960px;
+            }
+        }
     }
 
     div>input{
@@ -68,6 +72,6 @@ header{
         border-radius: 3px;
         padding: .45rem;
         border: none;
-        margin: 1rem;
+        // margin: 1rem;
     }
 }
